FTDC logs warnings about deprecated server parameters at startup

XMLWordPrintableJSON

    • Networking & Observability
    • Fully Compatible
    • ALL
    • Security 2024-06-24, N&O 2025-06-09, N&O 2025-06-23
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When I start mongod I see the following warnings from FTDC:

      {"t":{"$date":"2024-05-06T21:04:12.070+00:00"},"s":"W",  "c":"CONTROL",  "id":636300,  "ctx":"ftdc","msg":"Use of deprecated server parameter name","attr":{"deprecatedName":"internalQueryCacheSize","canonicalName":"internalQueryCacheMaxEntriesPerCollection"}}
      {"t":{"$date":"2024-05-06T21:04:12.075+00:00"},"s":"W",  "c":"CONTROL",  "id":636300,  "ctx":"ftdc","msg":"Use of deprecated server parameter name","attr":{"deprecatedName":"oplogSamplingLogIntervalSeconds","canonicalName":"collectionSamplingLogIntervalSeconds"}}
      {"t":{"$date":"2024-05-06T21:04:12.075+00:00"},"s":"W",  "c":"NETWORK",  "id":23803,   "ctx":"ftdc","msg":"Use of deprecated server parameter 'sslMode', please use 'tlsMode' instead."}
      {"t":{"$date":"2024-05-06T21:04:12.075+00:00"},"s":"W",  "c":"CONTROL",  "id":636300,  "ctx":"ftdc","msg":"Use of deprecated server parameter name","attr":{"deprecatedName":"wiredTigerConcurrentReadTransactions","canonicalName":"storageEngineConcurrentReadTransactions"}}
      {"t":{"$date":"2024-05-06T21:04:12.075+00:00"},"s":"W",  "c":"CONTROL",  "id":636300,  "ctx":"ftdc","msg":"Use of deprecated server parameter name","attr":{"deprecatedName":"wiredTigerConcurrentWriteTransactions","canonicalName":"storageEngineConcurrentWriteTransactions"}}
      

      I don't see these parameters actually being used, so I think there's a bug somewhere that these are being printed.

            Assignee:
            Michael Popov (Inactive)
            Reporter:
            Louis Williams
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: