SERVER-90245 Fix unnecessary log messages about deprecated server parameters (#36915)

GitOrigin-RevId: b4b86d9b52a2c6446a265f1d95ffd48b5f236613