src/mongo/db/server_parameter.h
@@ -430,6 +430,8 @@ public:
     Status setFromString(StringData str, const boost::optional<TenantId>& tenantId) final;
 
 private:
+    void _warnOnUse(StringData action, OperationContext* opCtx = nullptr);
+
     std::once_flag _warnOnce;
     ServerParameter* _sp;
 };
